--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -50,6 +50,32 @@ section:not(.no-indent) {
   margin: var(--indent);
 }
 
+// .columns {
+//   margin-top: var(--indent);
+//   // margin-bottom: var(--indent);
+// }
+
+// * + .columns section {
+//   margin-top: 0;
+// }
+
+.columns section:not(.no-indent) {
+  margin-left: 0;
+  margin-right: 0;
+  // margin-top: 0;
+  // margin: 0;
+
+  &:first-child {
+    margin-left: var(--indent);
+    margin-right: var(--column-gap);
+  }
+
+  &:last-child {
+    margin-left: var(--column-gap);
+    margin-right: var(--indent);
+  }
+}
+
 p,
 li,
 input,
