Add style select, maps api to preferences

--- a/components/map/map.astro
+++ b/components/map/map.astro
@@ -1,13 +1,10 @@
 ---
-// https://www.google.com.au/maps/place/The+Oarhouse/
-// @-31.9310252,115.9161898,18.09z
-//data=!4m6!3m5!1s0x2a32bb37a3a762b7:0x928ca6471325d598!8m2!3d-31.9309816!4d115.9173456!16s%2Fg%2F11tnnk6jk6?hl=en&entry=ttu
-
 export interface props {
   lat: number;
   lng: number;
   zoom?: number;
   height: number;
+  style?: any;
   attribution?: boolean;
   indent?: boolean;
   key?: string;
