--- a/pages/[...slug].astro
+++ b/pages/[...slug].astro
@@ -19,6 +19,7 @@ export async function getStaticPaths() {
 }
 
 const page = Astro.props.page;
+const slug = Astro.params.slug;
 if (!page.data.content_blocks) {
   throw new Error(
     `Tried to output page with unsupported schema: ${page.data._schema}`
@@ -26,4 +27,4 @@ if (!page.data.content_blocks) {
 }
 ---
 
-<PageLayout frontmatter={page.data} />
+<PageLayout frontmatter={page.data} id={page.id} />
