Remove SCSS from column, slider components

--- a/components/layout/columns/columns.astro
+++ b/components/layout/columns/columns.astro
@@ -44,9 +44,9 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
   }
 </div>
 
-<style lang="scss">
+<style>
   .columns {
-    // column-gap: var(--column-gap);
+    /* column-gap: var(--column-gap); */
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: repeat(var(--column-count), 1fr);
