--- a/pages/[...slug].astro
+++ b/pages/[...slug].astro
@@ -5,17 +5,20 @@ import { getCollection, CollectionEntry } from "astro:content";
 export interface Props {
   page: CollectionEntry<"pages">;
 }
+
 export async function getStaticPaths() {
   const pages = await getCollection(
     "pages",
     ({ data }) => data.status != "offline"
   );
-  return pages.map((page) => {
+  const staticPaths = pages.map((page) => {
     const slug = page.slug.replace(/index$/, "");
     if (slug.length === 0)
       return { params: { slug: undefined }, props: { page } };
     return { params: { slug }, props: { page } };
   });
+
+  return staticPaths;
 }
 
 const page = Astro.props.page;
@@ -27,4 +30,8 @@ if (!page.data.content_blocks) {
 }
 ---
 
-<PageLayout frontmatter={page.data} id={page.id} />
+<PageLayout
+  frontmatter={page.data}
+  id={page.id}
+  paths={await getStaticPaths()}
+/>
