--- a/pages/[...slug].astro
+++ b/pages/[...slug].astro
@@ -34,4 +34,5 @@ if (!page.data.content_blocks) {
   frontmatter={page.data}
   id={page.id}
   paths={await getStaticPaths()}
+  currentPath={slug}
 />
