--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -1,5 +1,7 @@
 ---
 import MarkdownIt from "markdown-it";
+import "@glidejs/glide";
+import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 const md = new MarkdownIt({ html: true });
 
 export interface Props {
@@ -176,6 +178,8 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
 
 <script>
   import Glide from "@glidejs/glide";
+
+  console.log("test");
 
   document.querySelectorAll("div[data-glide]").forEach((e, i) => {
     if (!(e instanceof HTMLElement)) return;
