--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -16,7 +16,7 @@ export interface Props {
 
 import "../styles/styles.scss";
 // import "../styles/layouts.scss";
-import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
+// import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 // import "node_modules/@glidejs/glide/dist/css/glide.theme.min.css";
 
 const {
