Hover Navigation with hoverintent and floating-ui

--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -31,7 +31,7 @@ const ENV_EDITOR: boolean = ENV_BOOKSHOP_LIVE || false;
     padding: 1rem;
     border: 1px solid #f0f0f0;
     background-color: white;
-    top: 0;
+    bottom: 0;
     right: 0;
     box-shadow: 0.5rem 0.5rem 2rem #00000011;
   }
