--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "@shared/Navigation.astro";
+import Header from "@shared/Header.astro";
 
 export interface Props {
   title: string;
@@ -42,7 +42,7 @@ const pageTitle = title + preferences.general.browser_window_title_suffix;
     <title>{pageTitle}</title>
   </head>
   <body>
-    {show_global_header && <Navigation {id} {paths} {currentPath} />}
+    {show_global_header && <Header {id} {paths} {currentPath} />}
     <article>
       <slot />
       {show_global_footer && <section id="footer">Footer!</section>}
